# gridstats

./: .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml  refactor-plan.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker.yml  docs.yml  publish.yml  test.yml
docs/: Makefile  conf.py  configuration.md  getting-started.md  index.md  index.rst  installation.rst  loaders.md  make.bat  plugins.md  usage.rst
docs/api/: config.md  output.md  pipeline.md  registry.md
docs/configuration/: calls.md  cluster.md  index.md  metadata.md  output.md  source.md
docs/derived/: current.md  index.md  sky.md  uorb.md  wave.md  wind.md
docs/loaders/: index.md  intake.md  xarray.md
docs/ops/: aggregations.md  derived.md  directional.md  distribution.md  exceedance.md  frequency-domain.md  index.md  probability.md  rpv.md  windpower.md
gridstats/: __init__.py  attributes.yml  cli.py  config.py  output.py  pipeline.py  registry.py
gridstats/derived/: __init__.py  current.py  sky.py  uorb.py  wave.py  wind.py
gridstats/loaders/: __init__.py  intake.py  xarray.py
gridstats/ops/: __init__.py  aggregations.py  derived.py  directional.py  distribution.py  exceedance.py  frequency_domain.py  probability.py  rpv.py  windpower.py
onstats/: README.rst  __init__.py  attributes.yml  cli.py  config.py  core.py  derived_variable.py  distribution.py  frequency_domain.py  kmzstats.py  kmzstats_new.py  numpy_stats.py  output.py  pipeline.py  registry.py  stats.py  stats.yml  util.py  utils.py  xarray_stats.py
onstats/functions/: README.rst  __init__.py  distribution.py  exceedance.py  frequency_domain.py  miscellaneous.py  probability.py  rpv.py  windpower.py  xarray_wrapper.py
onstats/loaders/: __init__.py  intake.py  xarray.py
onstats/ops/: __init__.py  aggregations.py  directional.py  distribution.py  exceedance.py  frequency_domain.py  probability.py  rpv.py  windpower.py
scripts/: points_kmz.py
stats/: __init__.py  cli.py  derived_variable.py  distribution.py  kmzstats.py  stats.py  util.py
tests/: config-hsig.yml  config.yml  test_cli.py  test_config.py  test_loaders.py  test_ops.py  test_output.py  test_pipeline.py  test_registry.py  test_stats.py
tests/catalog/: oceanum.yml
tests/catalog/era5_wind.zarr/: .zattrs  .zmetadata
tests/catalog/era5_wind.zarr/latitude/: .zarray  0
tests/catalog/era5_wind.zarr/longitude/: .zarray  0
tests/catalog/era5_wind.zarr/time/: .zarray  0
tests/catalog/era5_wind.zarr/u10/: .zattrs  0.0.0
tests/catalog/era5_wind.zarr/v10/: .zarray  .zattrs  0.0.0
tests/catalog/hindcast/: hindcast.yml
