[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onstats"
version = "2.0.0"
description = "Oceanum library for computing gridded statistics on oceanographic datasets"
authors = [{ name = "Oceanum Developers", email = "developers@oceanum.science" }]
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "bottleneck",
    "dask",
    "distributed",
    "flox",
    "intake-forecast",
    "pydantic>=2",
    "pyyaml",
    "scipy",
    "typer",
    "xarray",
    "zarr<3",
]

[project.optional-dependencies]
intake = ["intake-forecast"]
dev = [
    "pytest",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://gitlab.com/oceanum/onstats"
Repository = "https://gitlab.com/oceanum/onstats"

[project.scripts]
onstats = "onstats.cli:main"

# Entry points for third-party plugin packages.
# Stat functions: [project.entry-points."onstats.stats"]
# Loaders:        [project.entry-points."onstats.loaders"]

[tool.setuptools.packages.find]
include = ["onstats*"]

[tool.setuptools.package-data]
onstats = ["attributes.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
